update stat2  for 2020

--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -37,11 +37,10 @@
   <div class="content">
   <h2>統計学 2</h2>
 
-    <p>2020年度 <s>第1クォータ</s>　高知工科大学　経済・マネジメント学群</p>
-    <p>[新型コロナウィルスの影響により、1Qの開講は見合わせ、2Q以降に延期します]</p>
-    <p>[（6月7日追記） 2020年度の統計学2は、夏期集中講義として開講することになりました。]
+    <p>2020年度 <s>第1クォータ</s> 夏期集中 高知工科大学　経済・マネジメント学群</p>
+    <p>[新型コロナウィルスの影響により、開講を夏期に変更しました]</p>
 
-  <!--<h4><a class="black" href="docs/syllabus-stat2_2020-1Q.pdf">シラバス</a></h4>-->
+  <h4><a class="black" href="docs/syllabus-stat2_2020-summer.pdf">シラバス</a></h4>
 
      <br>
 
@@ -49,8 +48,7 @@
     <p>現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。</p>
     <br>
 
-  <h3>授業の内容（準備中）</h3>
-  <!--<h3><a href="contents/">授業の内容</a></h3>-->
+  <h3><a href="contents/">授業の内容</a></h3>
     <br>
 
 
@@ -59,6 +57,13 @@
   <ul>
     <li> 浅野正彦, 矢内勇生. 2018.『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
   </ul>
+  
+   <h4>副読本</h4>
+
+  <ul>
+    <li> 宋財泫, 矢内勇生. 2020.『<a href="http://www.jaysong.net/RBook/" target="_blank">私たちのR</a>』(web-book)</li>
+  </ul>
+
 
 
 
