--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -36,7 +36,7 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
     <h1>統計学 2</h1>
-    <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 夏期　高知工科大学　経済・マネジメント学群</p>
     <p><a href="../">授業概要</a></p>
     <br>
 
@@ -44,37 +44,52 @@
 
     <h3>1. イントロダクション</h3>
     <ul>
-       <li><a href="slides/stat2-slides-01.pdf">講義スライド</a><li>
-    </ul>
-
-
-    <h3>2. Rを使ってみよう</h3>
-    <ul>
-      <li><a href="slides/stat2-slides-02.pdf">講義スライド</a><li>
-      <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
-  	  <li><a href="R/introduction-to-R.html">R入門</a></li>
-  	  <li><a href="R/birthday.html">誕生日問題</a></li>
-    </ul>
-
-    <h3>3. 記述統計とデータの可視化 (1)</h3>
-    <ul>
-      <li><a href="slides/stat2-slides-03.pdf">講義スライド</a></li>
-      <li><a href="R/introduction-to-RStudio.html">RStudio入門と記述統計</a></li>
-    </ul>
-
-    <h3>4. 記述統計とデータの可視化 (2)</h3>
-    <ul>
-       <li>この回は講義スライドなし</a></li>
-      <li><a href="R/r-markdown.html">Rマークダウン入門と2変数の記述統計</a>
+<!--      <li><a href="slides/stat2_slides_topic01.pdf">講義スライド (PDF)</a><li> -->
+      <li>
+      R と RStudio のインストールと設定
         <ul>
           <li></li>
-          <li>Rマークダウン入門のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
-          <li>Rマークダウン入門のPDFファイル (<a href="R/r-markdown.PDF">r-markdown.PDF</a>)</li>
-          <li>スタイルシート (<a href="R/my-markdown.css">my-markdown.css</a>)</li>
+          <li><a href="docs/install-R_ubuntu.pdf" target="_blank">Linux (Ubuntu) 編</a> (PDF, 4.6MB)</li>
+          <li><a href="docs/install-R_macOS.pdf" target="_blank">macOS 編</a> (PDF, 4.9MB)</a></li>
+          <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 5.8MB）</li>
         </ul>
       </li>
     </ul>
 
+
+    <h3>2. Rの基本操作</h3>
+    <ul>
+<!--      <li><a href="slides/stat2_slides_topic02.pdf">講義スライド (PDF)</a><li> -->
+      <!--<li><a href="R/installing-R.html">R とRStudio のインストール</a></li>-->
+  	  <li><a href="R/introduction-to-R.html">R入門</a></li>
+  	  <li><a href="R/birthday.html">誕生日問題</a></li>
+    </ul>
+
+    <h3>3. 記述統計とデータの可視化</h3>
+    <ul>
+     <!-- <li><a href="slides/stat2_slides_topic03.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="R/introduction-to-RStudio.html">RStudio入門と記述統計</a></li>
+    </ul>
+
+    <h3>4. R Markdown によるレポート作成</h3>
+    <ul>
+      <!--<li><a href="slides/stat2_slides_topic04.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="R/r-markdown.html">Rマークダウンの使い方</a> (HTML)
+        <ul>
+          <li></li>
+          <li>「Rマークダウンの使い方」のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
+          <li>「Rマークダウンの使い方」のPDFファイル (<a href="R/r-markdown.PDF">r-markdown.PDF</a>)</li>
+          <li>スタイルシート (<a href="R/my-markdown.css">my-markdown.css</a>)</li>
+        </ul>
+      </li>
+    </ul>
+    
+    <h3><a href="R/stat2_assignment01.html">課題1</a></h3>
+    <ul>
+      <li><b>提出期限：2020年9月21日（月）午前10時</b>（日本時間）</li>
+    </ul>
+
+<!--
     <h3>5. ヤバいグラフ</h3>
     <ul>
       <li>講義スライドは配布しない</li>
@@ -131,7 +146,6 @@
       <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
     </ul>
 
-  <!--
     <h3>16. まとめ</h3>
     <ul>
        <li><a href="slides/stat2-slides-15.pdf">講義スライド</a></li>
@@ -154,7 +168,7 @@
     <ul>
        <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li>
       <li><a href="R/regression.html">回帰分析入門</a></li>
-    </ul> -->
+    </ul> 
 
 
 
@@ -165,6 +179,8 @@
       <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li>
       <li><a href="R/stat2-hw06-solutions.html">課題6の解答例</a></li>
     </ul>
+    
+    -->
 
    </div>
   <!-- InstanceEndEditable -->
