--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -44,7 +44,7 @@
 
     <h3>1. イントロダクション</h3>
     <ul>
-<!--      <li><a href="slides/stat2_slides_topic01.pdf">講義スライド (PDF)</a><li> -->
+      <li><a href="slides/stat2_slides_topic01_pub.pdf">講義スライド (PDF)</a><li>
       <li>
       R と RStudio のインストールと設定
         <ul>
@@ -59,7 +59,7 @@
 
     <h3>2. Rの基本操作</h3>
     <ul>
-<!--      <li><a href="slides/stat2_slides_topic02.pdf">講義スライド (PDF)</a><li> -->
+     <li><a href="slides/stat2_slides_topic02_pub.pdf">講義スライド (PDF)</a><li>
       <!--<li><a href="R/installing-R.html">R とRStudio のインストール</a></li>-->
   	  <li><a href="R/introduction-to-R.html">R入門</a></li>
   	  <li><a href="R/birthday.html">誕生日問題</a></li>
@@ -67,13 +67,13 @@
 
     <h3>3. 記述統計とデータの可視化</h3>
     <ul>
-     <!-- <li><a href="slides/stat2_slides_topic03.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="slides/stat2_slides_topic03_pub.pdf">講義スライド [公開用] (PDF)</a></li>
       <li><a href="R/introduction-to-RStudio.html">RStudio入門と記述統計</a></li>
     </ul>
 
     <h3>4. R Markdown によるレポート作成</h3>
     <ul>
-      <!--<li><a href="slides/stat2_slides_topic04.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/stat2_slides_topic04_pub.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/r-markdown.html">Rマークダウンの使い方</a> (HTML)
         <ul>
           <li></li>
