--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -43,7 +43,7 @@
         <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
         </li>
 
-        <li>Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
+        <li><a href="https://www.jstage.jst.go.jp/article/jaes/30/2/30_60/_article/-char/ja" target="_blank">Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet</a> (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
 
         <li><a href="https://academic.oup.com/irap/article/14/1/91/739395" target="_blank">External Threats, US Bases, and Prudent Voters in Okinawa</a> (<a href="https://sites.google.com/site/kojikagotani/" target="_blank">籠谷公司</a> 氏と共著). <a class="booktitle" href="http://irap.oxfordjournals.org/" target="_blank">International Relations of the Asia-Pacific</a> 14(1): 91-115 (Jan. 2014)  [<a class="abst" href=" https://doi.org/10.1093/irap/lct017 " target="_blank">要旨</a>]
         <div class="exp">分析再現用のデータセットは<a href="https://sites.google.com/site/kojikagotani/" target="_blank">共著者のウェブサイト</a>にあります.</div></li>
@@ -51,14 +51,19 @@
 
   <h3>著書</h3>
   <ul>
+    <li>『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』（<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基 氏, 上川龍之進 氏と共著）（2020年9月, 有斐閣）
+      <div class="exp"> ISBN: 978-4-641-15079-9</div>
+    </li>
     <li>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2018年12月, オーム社)
-    <div class="exp"> ISBN: 978-4-274-22313-2</div>
-    <div class="exp"> <a href="https://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</div>
-     <div class="exp">本書の分析に使ったデータセット, Rスクリプト, 練習問題の解答例は<a href="https://github.com/yukiyanai/quant-methods-R">本書のページ</a>で.</div></li>
+      <div class="exp"> ISBN: 978-4-274-22313-2</div>
+      <div class="exp"><a href="https://www.ohmsha.co.jp/book/9784274223136/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</div>
+      <div class="exp">本書の分析に使ったデータセット, Rスクリプト, 練習問題の解答例は<a href="https://github.com/yukiyanai/quant-methods-R">本書のサポートページ</a>で.</div>
+    </li>
     <li>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社)
-    <div class="exp"> ISBN: 978-4-274-06910-9</div>
-    <div class="exp"><a href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で購入できます.</div>
-     <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/jp/quant-methods-stata/">本書のページ</a>で.</div></li>
+      <div class="exp"> ISBN: 978-4-274-06910-9</div>
+      <div class="exp"><a href="https://www.ohmsha.co.jp/book/9784274069109/" target="_blank">ここ</a> から購入できます（電子書籍もあります）.</div>
+       <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/jp/quant-methods-stata/">本書のサポートページ</a>で.</div>
+    </li>
   </ul>
 
   <h3>分担執筆</h3>
@@ -111,13 +116,13 @@
   <h3>賞・研究費・奨学金</h3>
 
   <ul>
-    <li>科学研究費補助金・基盤B・No.19H01447（2019-22年度）[研究代表者] </li>
-    <li>科学研究費補助金・挑戦的研究（萌芽）・No.19K21682（2019-21年度）[研究代表者]</li>
+    <li>科学研究費補助金・基盤B, No.19H01447（2019-22年度）[研究代表者] </li>
+    <li>科学研究費補助金・挑戦的研究（萌芽）, No.19K21682（2019-21年度）[研究代表者]</li>
     <li>アメリカ南部政治学会, Walter Beach Award（2018年）</li>
-    <li>科学研究費補助金・若手B・No.16K17051（2016-18年度）</li>
-    <li>科学研究費補助金・若手B・No.25780102（2013-15年度）</li>
+    <li>科学研究費補助金・若手B, No.16K17051（2016-18年度）</li>
+    <li>科学研究費補助金・若手B, No.25780102（2013-15年度）</li>
     <li>アメリカ南部政治学会, Prestage-Cook Award（2012年）</li>
-    <li>科学研究費補助金・研究活動スタート支援・No. 22830099（2010-11年度）</li>
+    <li>科学研究費補助金・研究活動スタート支援, No.22830099（2010-11年度）</li>
     <li>UCLA, George and Sakaye Aratani Fellowship (2009年）</li>
     <li>UCLA, IRLE Research Grant (2009年）
     <li>国際文化教育交流財団（現：経団連国際教育交流財団）, 海外派遣奨学生（2006-08年）</li>
