--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -37,29 +37,35 @@
   <div class="content">
 
     <h1>執筆した教科書</h1>
-
+    
+    <h2> 『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』</h2>
+    <!-- <img src="" width="20%" align="right" hspace=40 vspace=10 border=1> -->
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基氏, 上川龍之進氏と共著</h3>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2020年, <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a></h4>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
+    <!-- <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank">ここ</a> から購入できます</h3> -->
+    <br><br><br><br><br>
 
     <h2>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』</h2>
     <img src="images/quant-methods-R-cover.png" width="20%" align="right" hspace=40 vspace=10 border=1>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;2018年</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-22313-2</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</h3>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2018年, <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-22313-2</h4>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">サポートページ</a></h3>
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/book/9784274223136/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</h3>
+    <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</h3> -->
 
     <br><br><br><br><br>
 
     <h2>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』</h2>
     <img src="images/stata-cover.jpg" width="20%" align="right" hspace=40 vspace=10 border=1>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;2013年</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-06910-9</h3>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2013年, <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-06910-9</h4>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/jp/quant-methods-stata/">サポートページ</a></h3>
-
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は <a class="red" href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で
-    購入できます.</h3>
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/book/9784274069109/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</h3>
+    <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は <a class="red" href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で
+    購入できます.</h3>-->
 
     <br><br><br><br><br>
 
