--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -39,11 +39,12 @@
     <h1>執筆した教科書</h1>
     
     <h2> 『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』</h2>
-    <!-- <img src="" width="20%" align="right" hspace=40 vspace=10 border=1> -->
+    <img src="images/political_economy.jpg" width="20%" align="right" hspace=40 vspace=10 border=1>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基氏, 上川龍之進氏と共著</h3>
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;2020年, <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a></h4>
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
-    <!-- <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank">ここ</a> から購入できます</h3> -->
+    <!-- <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">ここ</a> から購入できます</h3> -->
+    <br><br><br><br><br>
     <br><br><br><br><br>
 
     <h2>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』</h2>
