--- a/research/index.html
+++ b/research/index.html
@@ -48,7 +48,7 @@
       <h3>Books</h3>
       
       <ul>
-        <li><a class="booktitle" href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">Seijikeizaigaku: Gurobarujidai-no-kokka-to-shijo</a> [<i>Political Economy</i>] (with <a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">Takuji Tanaka</a>, Masaki Kondo, and Ryunoshin Kamikawa)（Sep. 2020, Yuhikaku）
+        <li><a class="booktitle" href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">Seijikeizaigaku: Gur&#333;barujidai-no-kokka-to-shij&#333;</a> [<i>Political Economy</i>] (with <a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">Takuji Tanaka</a>, Masaki Kondo, and Ryunoshin Kamikawa)（Sep. 2020, Yuhikaku）
         <div class="exp"> ISBN: 978-4-641-15079-9</div>
     </li>
 
