--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -144,6 +144,11 @@
     <ul>
       <li><b>提出期限：2020年9月24日（木）午後1時</b>（日本時間）</li>
     </ul>
+    
+    <h3><a href="R/stat2_2020_final.html">期末レポートの課題</a></h3>
+    <ul>
+      <li><b>提出期限：2020年9月30日（水）午前10時</b>（日本時間）</li>
+    </ul>
 
 
 
