--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -43,7 +43,7 @@
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基氏, 上川龍之進氏と共著</h3>
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;2020年, <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a></h4>
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
-    <!-- <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">ここ</a> から購入できます</h3> -->
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">ここ</a> から購入できます</h3>
     <br><br><br><br><br>
     <br><br><br><br><br>
 
