--- a/jp/classes/stat2/contents/R/stat2_assignment03.html
+++ b/jp/classes/stat2/contents/R/stat2_assignment03.html
@@ -638,7 +638,7 @@ summary {
 </table>
 <ol style="list-style-type: decimal">
 <li>帰無仮説と対立仮説は何か？それぞれ述べなさい。</li>
-<li>評価の差の平均価はいくつ？</li>
+<li>評価の差の平均<s>価</s>値はいくつ？</li>
 <li>検定統計量はいくつ？</li>
 <li>検定の臨界値はいくつ？</li>
 <li>検定の結論は？</li>
