update courses for 2020-3q

--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -36,7 +36,7 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
     <h1>計量経済学</h1>
-    <p>2019年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
     <p><a href="../">授業概要</a></p>
     <br>
 
@@ -46,14 +46,16 @@
 
     <h3>1. イントロダクション</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li>
-      <li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>
+      <li><a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a></li>
+      <!--<li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>-->
     </ul>
 
+<!--
     <h3>2. RとRStudioの基本操作（復習）</h3>
     <ul>
       <li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/" target="_blank">統計学2のページ</a>を参照</li>
     </ul>
+
 
     <h3>3. 二変数の関係</h3>
     <ul>
@@ -111,7 +113,7 @@
 
     <h3>13. 回帰分析で交差項を利用する</h3>
     <ul>
-      <!--<li><a href="slides/econometrics-slides-12.pdf">講義スライド (PDF)</a></li> -->
+      <!--<li><a href="slides/econometrics-slides-12.pdf">講義スライド (PDF)</a></li> 
       <li><a href="R/interaction.html">交差項の利用</a></li>
     </ul>
 
@@ -120,6 +122,7 @@
       <li><a href="R/visualization-tips.html">データ可視化のTips</a></li>
     </ul>
 
+-->
 
 <!--
 
