--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -37,11 +37,12 @@
   <div class="content">
   <h2>情報科学 3</h2>
 
-    <p>2019年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
 
 
 
-  <h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>
+  <!--<h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>-->
+  <h4>シラバスは KUTLMS に掲載 </h4>
 
   <br>
 
@@ -53,6 +54,7 @@
 
   <h3>授業に役立つリンク</h3>
   <ul>
+    <li><a href="https://colab.research.google.com/" target="_blank">Google Colab</a></li>
     <li><a href="https://py3.codeskulptor.org/" target="_blank">CodeSkulptor3</a>（ウェブ上でPython 3プログラムを実行できる）</li>
     <li>Dive into Python 3（<a href="http://www.diveintopython3.net/" target="_blank">英語版</a>; <a href="http://diveintopython3-ja.rdy.jp/" target="_blank">日本語版</a>）</li>
     <li><a href="https://scratch-howto.com/" target="_blank">スクラッチプログラミング入門</a></li>
