--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -49,19 +49,19 @@
       <li><a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a></li>
       <!--<li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>-->
     </ul>
-
-<!--
+    
     <h3>2. RとRStudioの基本操作（復習）</h3>
     <ul>
       <li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/" target="_blank">統計学2のページ</a>を参照</li>
     </ul>
 
-
     <h3>3. 二変数の関係</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li>
+      <!-- <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li> -->
       <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
     </ul>
+
+<!--
 
     <h3>4. 回帰分析の基礎</h3>
     <ul>
