--- a/teaching/index.html
+++ b/teaching/index.html
@@ -35,7 +35,7 @@
   <div class="content">
   <h2>Courses</h2>
   
-  <h3>Current (Spring 2019)</h3>
+  <h3>Current (Fall 2020)</h3>
   <ul>
     <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (u; in Japanese)</li>
     <li><a href="/jp/classes/info3/" target="_blank">Information Science III</a> (u; in Japanese)</li>
