--- a/jp/classes/econometrics1/contents/assignments/econometrics_2020_hw02.html
+++ b/jp/classes/econometrics1/contents/assignments/econometrics_2020_hw02.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="矢内 勇生" />
 
-<meta name="date" content="2020-10-11" />
+<meta name="date" content="2020-10-18" />
 
 <title>計量経済学（高知工科大学 2020年度）</title>
 
@@ -512,7 +512,7 @@ summary {
 <h1 class="title toc-ignore">計量経済学（高知工科大学 2020年度）</h1>
 <h3 class="subtitle">課題2</h3>
 <h4 class="author">矢内 勇生</h4>
-<h4 class="date">2020-10-11</h4>
+<h4 class="date">2020-10-18</h4>
 
 </div>
 
@@ -526,7 +526,7 @@ summary {
 <li>処置（原因）は何か。また、処置の値として考えられるものは何か。</li>
 <li>結果は何か。また、結果の値として考えられるものは何か。</li>
 <li>潜在的結果は何か（ヒント：一つの処置に、一つの潜在的結果）。</li>
-<li>1で想定した因果関係があるというためには、どのようなことが観察されることが必要か。</li>
+<li>1で想定した因果関係があるというためには、どのようなことが観察されることが必要か（どのようなことが観察されたら、因果関係があるとは言えなくなるか）。</li>
 <li>実験を行わず、調査・観察データでこの因果関係を確かめようとすると、どのようなセレクションバイアスが生じることが想定されるか。</li>
 </ol>
 <div id="回答例" class="section level3">
@@ -542,18 +542,18 @@ summary {
 </ol>
 <ul>
 <li>頭痛がひどい人のほうが、アスピリンを飲む確率が高いかもしれない。</li>
-<li>過去の経験からアスピリンが効くとわかっている人の方が、アスピリンを飲む確率が高いかもしれない</li>
+<li>過去の経験からアスピリンが効くとわかっている人の方が、アスピリンを飲む確率が高いかもしれない。</li>
 </ul>
 </div>
 <div id="提出方法" class="section level3">
 <h3>提出方法</h3>
 <ul>
-<li>A4サイズの用紙（枚数は自由。2枚以上の場合はホチキス等で綴じる）に結果をまとめ、PDFファイルをSlackのDM で担当教員に送る</li>
+<li>回答を記載したPDFファイルをSlackのDM で担当教員に送る</li>
 <li>提出ファイル名：metrics_hw2_StudentID.pdf
 <ul>
 <li><code>StudentID</code> の部分を自分の学籍番号に置き換えること</li>
 </ul></li>
-<li><strong>10月31日（木）の授業開始時まで</strong>に提出</li>
+<li><strong>10月29日（木）の授業開始時まで</strong>に提出</li>
 </ul>
 <br> <br>
 <div align="right">
