--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -74,20 +74,21 @@
     <ul>
       <li><a href="slides/econometrics_slides_05.pdf">講義スライド (PDF)</a></li>
     </ul>
-<!--
+
     <h3>6. 因果推論 II</h3>
     <ul>
       <li><a href="slides/econometrics_slides_06.pdf">講義スライド (PDF)</a></li>
       <li><a href="assignments/econometrics_2020_hw02.html">課題2</a>（<b>提出期限：10月29日の授業開始時</b>）</li>
     </ul>
 
+
     <h3>7. データの収集・クリーニング</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-07.pdf">講義スライド (PDF)</a></li>
+      <!--<li><a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a></li> -->
       <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
     </ul>
 
-    <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
+<!--    <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
     <ul>
       <li><a href="slides/econometrics-slides-08.pdf">講義スライド (PDF)</a></li>
     </ul>
