--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -84,16 +84,22 @@
 
     <h3>7. データの収集・クリーニング</h3>
     <ul>
-      <!--<li><a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
     </ul>
 
-<!--    <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
+   <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-08.pdf">講義スライド (PDF)</a></li>
+      <li><a href="slides/econometrics_slides_08.pdf">講義スライド (PDF)</a></li>
+    </ul>
+    
+    <h3> 9. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
+    <ul>
+      <!-- <li><a href="slides/econometrics_slides_09.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
     </ul>
 
-    <h3>9-10. 回帰分析による統計的推測 II: 仮説の検証と効果の推定</h3>
+<!--    <h3>9-10. 回帰分析による統計的推測 II: 仮説の検証と効果の推定</h3>
     <ul>
       <li><a href="slides/econometrics-slides-09.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
