--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -95,7 +95,7 @@
     
     <h3> 9. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
     <ul>
-      <!-- <li><a href="slides/econometrics_slides_09.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="slides/econometrics_slides_09.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
     </ul>
 
