--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -99,13 +99,14 @@
       <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
     </ul>
 
-<!--    <h3>9-10. 回帰分析による統計的推測 II: 仮説の検証と効果の推定</h3>
+    <h3>10. 回帰分析による統計的推測 III: 仮説を検証する (2)</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-09.pdf">講義スライド (PDF)</a></li>
-      <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
+      <!-- <li><a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="R/regression-test-inference.html">回帰分析による統計的検定と推定</a></li>
+      <li><a href="assignments/econometrics_2020_hw03.html">課題3</a>（<b>提出期限：11月12日の授業開始時</b>）</li>
     </ul>
 
-    <h3>11. 回帰分析の応用 I</h3>
+ <!--  <h3>12. 回帰分析の応用 I</h3>
     <ul>
       <li><a href="slides/econometrics-slides-11.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
