add slides for metrics1

--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -101,7 +101,7 @@
 
     <h3>10. 回帰分析による統計的推測 III: 仮説を検証する (2)</h3>
     <ul>
-      <!-- <li><a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a></li> -->
+       <li><a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/regression-test-inference.html">回帰分析による統計的検定と推定</a></li>
       <li><a href="assignments/econometrics_2020_hw03.html">課題3</a>（<b>提出期限：11月12日の授業開始時</b>）</li>
     </ul>
@@ -110,7 +110,6 @@
     <ul>
       <li><a href="slides/econometrics-slides-11.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
-      <li><a href="assignments/econometrics-2019-hw03.html">課題3</a>（<b>提出期限：11月18日の授業開始時</b>）</li>
     </ul>
 
     <h3>12. 回帰分析の応用 II</h3>
