update textbook info

--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -44,8 +44,13 @@
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;2020年, <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a></h4>
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">ここ</a> から購入できます</h3>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
+    <h4>&nbsp;&nbsp;&nbsp;&nbsp;電子版（固定レイアウト）もあります</h4>
+    <ul>
+      <li><a href="https://www.kinokuniya.co.jp/disp/CSfGoodsPage_001.jsp?CAT=08&GOODS_STK_NO=EK-0915564" target="_blank">紀伊國屋電子書籍ストア</a></li>
+      <li><a href="https://www.amazon.co.jp/dp/B08M5RTDLN/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank">amazon（kindleストア）</a></li>
+      <li><a href="https://coop-ebook.jp/asp/ShowSeriesDetail.do?seriesId=MBJS-386102" target="_blank">大学生協 (VarsityWave eBooks)</a></li>
+    </ul>
+    <br><br>
 
     <h2>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』</h2>
     <img src="images/quant-methods-R-cover.png" width="20%" align="right" hspace=40 vspace=10 border=1>
