--- a/jp/classes/econometrics1/contents/assignments/metrics2020_final.html
+++ b/jp/classes/econometrics1/contents/assignments/metrics2020_final.html
@@ -544,7 +544,7 @@ summary {
 <li>変更前：<s>2020年11月19日（木）正午</s></li>
 <li>変更後：<strong>2020年11月25日（水）正午</strong>（日本時間）</li>
 </ul>
-<p>下で説明する「データ可視化発表会」の提出期限のほうが早いので注意。データ可視化発表会で得られたコメントをもとに、レポートを書き直せるよう期限を変更する。</p>
+<p>下で説明する「データ可視化発表会」の提出期限のほうが早いので注意。データ可視化発表会で得られたコメントをもとにレポートを書き直せるよう、期限を変更する。</p>
 <div id="提出方法" class="section level3">
 <h3>提出方法</h3>
 <p>必要なファイル一式を、Slack のDM で担当教員に送る。提出が必要なファイルは以下のとおり。</p>
