--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -106,13 +106,15 @@
       <li><a href="assignments/econometrics_2020_hw03.html">課題3</a>（<b>提出期限：11月12日の授業開始時</b>）</li>
     </ul>
     
-    <h3><a href="assignments/metrics2020_final.html">最終課題とデータ可視化発表会</a><h3>
-
- <!--  <h3>12. 回帰分析の応用 I</h3>
+    <h3>11. 回帰分析の応用 I</h3>
     <ul>
-      <li><a href="slides/econometrics-slides-11.pdf">講義スライド (PDF)</a></li>
+     <!-- <li><a href="slides/econometrics-slides-11.pdf">講義スライド (PDF)</a></li>-->
       <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
     </ul>
+    
+    <h3><a href="assignments/metrics2020_final.html">最終課題とデータ可視化発表会</a><h3>
+
+ <!-- 
 
     <h3>12. 回帰分析の応用 II</h3>
     <ul>
