--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -119,7 +119,7 @@
     </ul>
     
     
-    <h3><a href="assignments/metrics2020_final.html">最終課題とデータ可視化発表会</a><h3>
+    <h3><a href="assignments/metrics2020_final.html">最終課題とデータ可視化発表会</a></h3>
     <ul>
       <li><a href="R/visualization-tips.html">データ可視化のTips</a></li>
     </ul>
