--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -39,27 +39,30 @@
 
   <h3>論文</h3>
   <ul>
-        <li><a href="http://www.jpsa-web.org/eibun_zassi/data/pdf/vol4/2018004.pdf" target="_blank">Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game</a> (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
-        <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
-        </li>
+    <li>When Voters Favour the Social Investment Welfare State (Marc Brazzill, 眞柄秀子と共著). <a class="booktitle" href="https://www.cambridge.org/core/journals/japanese-journal-of-political-science" target="_blank">Japanese Journal of Political Science</a> (Accepted for Publication)  [<a class="abst" href="https://doi.org/10.7910/DVN/5NC2AV" target="_blank">分析再現用データ</a>]
+    </li>
+    <li>Who Gets Close to Government Policies, and Who Steps Away?（<a href="https://soheishigemura.com/" target="_blank">重村壮平</a>, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> と共著）『選挙研究』36(2): xx-xx (2020, 近刊)  [<a class="abst" href="https://github.com/yukiyanai/jjes_persuasion" target="_blank">要旨・分析再現用データ</a>]</li>
+  
+    <li><a href="http://www.jpsa-web.org/eibun_zassi/data/pdf/vol4/2018004.pdf" target="_blank">Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game</a> (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a>, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a>, 谷圭祐と共著). <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
+    </li>
 
-        <li><a href="https://www.jstage.jst.go.jp/article/jaes/30/2/30_60/_article/-char/ja" target="_blank">Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet</a> (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
+    <li><a href="https://www.jstage.jst.go.jp/article/jaes/30/2/30_60/_article/-char/ja" target="_blank">Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet</a> (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
 
-        <li><a href="https://academic.oup.com/irap/article/14/1/91/739395" target="_blank">External Threats, US Bases, and Prudent Voters in Okinawa</a> (<a href="https://sites.google.com/site/kojikagotani/" target="_blank">籠谷公司</a> 氏と共著). <a class="booktitle" href="http://irap.oxfordjournals.org/" target="_blank">International Relations of the Asia-Pacific</a> 14(1): 91-115 (Jan. 2014)  [<a class="abst" href=" https://doi.org/10.1093/irap/lct017 " target="_blank">要旨</a>]
-        <div class="exp">分析再現用のデータセットは<a href="https://sites.google.com/site/kojikagotani/" target="_blank">共著者のウェブサイト</a>にあります.</div></li>
+    <li><a href="https://academic.oup.com/irap/article/14/1/91/739395" target="_blank">External Threats, US Bases, and Prudent Voters in Okinawa</a> (<a href="https://sites.google.com/site/kojikagotani/" target="_blank">籠谷公司</a> と共著). <a class="booktitle" href="http://irap.oxfordjournals.org/" target="_blank">International Relations of the Asia-Pacific</a> 14(1): 91-115 (Jan. 2014)  [<a class="abst" href=" https://doi.org/10.1093/irap/lct017 " target="_blank">要旨</a>]
+    <div class="exp">分析再現用のデータセットは<a href="https://sites.google.com/site/kojikagotani/" target="_blank">共著者のウェブサイト</a>にあります.</div></li>
   </ul>
 
   <h3>著書</h3>
   <ul>
-    <li>『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』（<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基 氏, 上川龍之進 氏と共著）（2020年9月, 有斐閣）
+    <li>『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』（<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a>, 近藤正基, 上川龍之進と共著）（2020年9月, 有斐閣）
       <div class="exp"> ISBN: 978-4-641-15079-9</div>
     </li>
-    <li>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2018年12月, オーム社)
+    <li>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> と共著) (2018年12月, オーム社)
       <div class="exp"> ISBN: 978-4-274-22313-2</div>
       <div class="exp"><a href="https://www.ohmsha.co.jp/book/9784274223136/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</div>
       <div class="exp">本書の分析に使ったデータセット, Rスクリプト, 練習問題の解答例は<a href="https://github.com/yukiyanai/quant-methods-R">本書のサポートページ</a>で.</div>
     </li>
-    <li>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社)
+    <li>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> と共著) (2013年2月, オーム社)
       <div class="exp"> ISBN: 978-4-274-06910-9</div>
       <div class="exp"><a href="https://www.ohmsha.co.jp/book/9784274069109/" target="_blank">ここ</a> から購入できます（電子書籍もあります）.</div>
        <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/jp/quant-methods-stata/">本書のサポートページ</a>で.</div>
@@ -70,7 +73,7 @@
 
   <ul>
 
-   <li>え！そっちに入れるんですか？伸縮する政策空間における有権者の投票行動モデリング. 豊田秀樹（編）『たのしいベイズモデリング2：事例で拓く研究のフロンティア』（<a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏と共著）（2019年11月, 北大路書房）
+   <li>え！そっちに入れるんですか？伸縮する政策空間における有権者の投票行動モデリング. 豊田秀樹（編）『たのしいベイズモデリング2：事例で拓く研究のフロンティア』（<a href="http://www.jaysong.net/" target="_blank">宋財泫</a> と共著）（2019年11月, 北大路書房）
    <div class="exp">ISBN: 978-4762830839&nbsp;&nbsp; <a href="http://amazon.co.jp/dp/4762830836/" target="_blank">amazon.co.jp</a>で購入できます.</div></li>
 
    <li>Political Reformation of Social Coalitions for Elections. In Hideko Magara and Bruno Amable, eds. <a class="booktitle" href="https://www.routledge.com/Growth-Crisis-Democracy-The-Political-Economy-of-Social-Coalitions-and/Magara-Amable/p/book/9781138222182" target="_blank">Growth, Crisis, and Democracy: The Political Economy of Social Coalitions and Policy Regime Change</a> (July 2017: Routledge) <!--[<a class="abst" href="abstracts/BLAHBLAH.html" target="_blank">要旨</a>]-->
@@ -79,7 +82,7 @@
     <li>How Do Economic Crises Affect Electoral Choices? Analysing Voting Behavior in the British General Elections of 2010, in Hideko Magara (ed) <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regimes: The Dynamics of Policy Innovation and Paradigmatic Change</a> (May 2014: Edward Elgar) [<a class="abst" href="abstracts/elections-in-crises.html" target="_blank">要旨</a>]
 <div class="exp">ISBN: 978-1-782-54991-8&nbsp;&nbsp; <a href="http://amazon.co.jp/dp/1782549919/" target="_blank">amazon.co.jp</a>で購入できます.</div></li>
 
-        <li>Governance with a Twist: How Bicameralism Affects Japanese Lawmaking (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著), in Robert Pekkanen, Steven R. Reed, and Ethan Scheiner (eds) <a class="booktitle" href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Japan Decides 2012: The Japanese General Election</a> (July 2013: Palgrave Macmillan)  [<a class="abst" href="abstracts/governance-with-a-twist.html" target="_blank">要旨</a>]
+        <li>Governance with a Twist: How Bicameralism Affects Japanese Lawmaking (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> と共著), in Robert Pekkanen, Steven R. Reed, and Ethan Scheiner (eds) <a class="booktitle" href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Japan Decides 2012: The Japanese General Election</a> (July 2013: Palgrave Macmillan)  [<a class="abst" href="abstracts/governance-with-a-twist.html" target="_blank">要旨</a>]
         <div class="exp">ISBN: 978-1-137-34851-7&nbsp;&nbsp; ハードカバー版は<a href="http://amazon.co.jp/dp/1137348518/" target="_blank">amazon.co.jp</a>で、電子書籍版 (PDF or EPUB) は <a href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Palgrave Macmillanのウェブサイト</a>で購入できます.</div></li>
    </ul>
 
@@ -90,16 +93,16 @@
   <h3>学会報告</h3>
 
   <ul>
-    <li><a class="black" href="http://www.jpsa-web.org/" target="_blank">日本政治学会</a>：2015</li>
+    <li><a class="black" href="http://www.jpsa-web.org/" target="_blank">日本政治学会</a>：2015, 2020</li>
     <li><a class="black" href="http://www.jaesnet.org/" target="_blank">日本選挙学会</a>：2011, 2012, 2013, 2014, 2019</li>
     <li><a class="black" href="http://www.jacpnet.org/" target="_blank">日本比較政治学会</a>：2012, 2014, 2016, 2017</li>
     <li><a class="black" href="http://chihoseijigakkai.jimdo.com/" target="_blank">日本地方政治学会・日本地域政治学会</a>：2012</li>
-    <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>： 2012 [x2], 2019</li>
+    <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>： 2012 [x2], 2019, 2020</li>
     <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>, <a class="black" href="http://www.apsanet.org/tlc" target="_blank">Teaching and Learning Conference</a>： 2016</li>
-    <li><a class="black" href="https://www.epsanet.org/" target="_blank">European Political Science Association</a>：2019</li>
+    <li><a class="black" href="https://www.epsanet.org/" target="_blank">European Political Science Association</a>：2019, 2020 (canceled due to COVID-19)</li>
     <li><a class="black" href="https://ecpr.eu/" target="_blank">European Consortium for Political Research</a>：2016, 2018</li>
     <li><a class="black" href="http://www.ipsa.org/" target="_blank">International Political Science Association</a>： 2018 [x2]</li>
-    <li><a class="black" href="http://www.mpsanet.org/" target="_blank">Midwest Political Science Association</a>：2009, 2010, 2016, 2019 [x2]</li>
+    <li><a class="black" href="http://www.mpsanet.org/" target="_blank">Midwest Political Science Association</a>：2009, 2010, 2016, 2019 [x2], 2020 (canceled due to COVID-19)</li>
     <li><a class="black" href="http://www.psa.ac.uk/" target="_blank">Political Studies Association</a>：2011</li>
     <li><a class="black" href="https://sase.org" target="_blank">Society for the Advancement of Socio-Economics</a>：2015</li>
     <li><a class="black" href="http://spsa.net/" target="_blank">Southern Political Sceicen Association</a>：2012 [x2], 2016 [x2], 2018</li>
@@ -119,10 +122,10 @@
     <li>科学研究費補助金・基盤B, No.19H01447（2019-22年度）[研究代表者] </li>
     <li>科学研究費補助金・挑戦的研究（萌芽）, No.19K21682（2019-21年度）[研究代表者]</li>
     <li>アメリカ南部政治学会, Walter Beach Award（2018年）</li>
-    <li>科学研究費補助金・若手B, No.16K17051（2016-18年度）</li>
-    <li>科学研究費補助金・若手B, No.25780102（2013-15年度）</li>
+    <li>科学研究費補助金・若手B, No.16K17051（2016-18年度）[研究代表者]</li>
+    <li>科学研究費補助金・若手B, No.25780102（2013-15年度）[研究代表者]</li>
     <li>アメリカ南部政治学会, Prestage-Cook Award（2012年）</li>
-    <li>科学研究費補助金・研究活動スタート支援, No.22830099（2010-11年度）</li>
+    <li>科学研究費補助金・研究活動スタート支援, No.22830099（2010-11年度）[研究代表者]</li>
     <li>UCLA, George and Sakaye Aratani Fellowship (2009年）</li>
     <li>UCLA, IRLE Research Grant (2009年）
     <li>国際文化教育交流財団（現：経団連国際教育交流財団）, 海外派遣奨学生（2006-08年）</li>
