--- a/research/index.html
+++ b/research/index.html
@@ -35,6 +35,10 @@
       
       <h3>Journal Articles</h3>
       <ul> 
+        <li>When Voters Favour the Social Investment Welfare State (with Marc Brazzill and Hideko Magara). <a class="booktitle" href="https://www.cambridge.org/core/journals/japanese-journal-of-political-science" target="_blank">Japanese Journal of Political Science</a> (Accepted for Publication)  [<a class="abst" href="https://doi.org/10.7910/DVN/5NC2AV" target="_blank">Replication Data</a>]
+    </li>
+    <li>Who Gets Close to Government Policies, and Who Steps Away?（with <a href="https://soheishigemura.com/" target="_blank">Sohei Shigemura</a> and <a href="http://www.jaysong.net/" target="_blank">Jaehyun Song</a>）<a class="booktitle" href="http://www.jaesnet.org/research/publications/index.html" target="_blank">Japanese Journal of Electoral Studies</a> 36(2): xx-xx (2020, forthcoming)  [<a class="abst" href="https://github.com/yukiyanai/jjes_persuasion" target="_blank">Abstaract and Replication Materials</a>]</li>
+        
         <li><a href="http://www.jpsa-web.org/eibun_zassi/data/pdf/vol4/2018004.pdf" target="_blank">Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game</a> (with  <a href="https://soheishigemura.com/" target="_blank">Sohei Shigemura</a>, <a href="http://www.jaysong.net/" target="_blank">Jaehyun Song</a>, and Keisuke Tani).
         <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal4-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (Oct. 2018) [<a class="abst" href="abstracts/playing-is-believing.html" target="_blank">Abstract</a>]
         </li>
